--- a/app/src/main/res/layout/child_sr_building_situation.xml
+++ b/app/src/main/res/layout/child_sr_building_situation.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:el_duration="500"
-                app:el_expanded="true">
+                app:el_expanded="false">
 
                 <LinearLayout
                     android:layout_margin="8dp"
